--- a/src/components/NavigationMenu/NavigationMenu.module.scss
+++ b/src/components/NavigationMenu/NavigationMenu.module.scss
@@ -1,4 +1,6 @@
-.header {
+.navigationMenu {
+  position: sticky;
+  top: 2px;
   display: flex;
   justify-content: space-between;
   align-items: center;
