добавил стилей для одного конкретного блока в списке

--- a/src/components/Events/EventsContainer.module.scss
+++ b/src/components/Events/EventsContainer.module.scss
@@ -22,3 +22,9 @@
     width: 400px;
     height: 400px;
 }
+
+.eventsTitle {
+    flex-direction: column;
+    padding: 130px 0;
+    justify-content: space-around;
+}
