--- a/src/components/AboutPPO/AboutPPo.module.scss
+++ b/src/components/AboutPPO/AboutPPo.module.scss
@@ -4,10 +4,17 @@
     align-items: center;
     width: 1140px;
     height: 500px;
-    border: 1px rgb(30, 255, 0) solid;
 }
-.aboutTitle {
+.aboutTitleBlock {
     width: 500px;
+}
+
+.title {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+.description {
+    font-size: 20px;
 }
 
 .image {
