--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -3,7 +3,11 @@
     height: 800px;
     display: flex;
     align-items: center;
-    border: 1px red solid;
+    background-color:hsla(180,39%,95%,1);
+    background-image:
+    radial-gradient(at 0% 50%, hsla(156,85%,47%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(195,67%,53%,1) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(132,90%,59%,0.43) 0px, transparent 50%);
 }
 
 .contactForm {
