--- a/src/components/NavigationMenu/NavigationMenu.module.scss
+++ b/src/components/NavigationMenu/NavigationMenu.module.scss
@@ -6,10 +6,9 @@
   justify-content: space-between;
   align-items: center;
   width: 1140px;
-  border: 1px red solid;
   padding: 0px 15px;
   border-radius: 10px;
-  background-color: #f8f9fa;
+  background-color: #e4e6e9;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -38,7 +37,7 @@
 }
 
 .navItem {
-  font-size: 16px;
+  font-size: 22px;
   color: #495057;
   cursor: pointer;
   transition: 0.17s;
