--- a/src/components/ServiceCards/ServiceCards.module.scss
+++ b/src/components/ServiceCards/ServiceCards.module.scss
@@ -1,7 +1,12 @@
 .serviceCards {
     width: 1140px;
     height: 700px;
-    border: 1px red solid;
+    background-color:hsla(182,20%,77%,1);
+    background-image:
+    radial-gradient(at 80% 0%, hsla(237,100%,56%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 50%, hsla(162,93%,63%,1) 0px, transparent 50%),
+    radial-gradient(at 0% 100%, hsla(70,100%,77%,1) 0px, transparent 50%),
+    radial-gradient(at 80% 100%, hsla(263,59%,84%,1) 0px, transparent 50%);
 }
 
 .cardsTitle {
@@ -10,9 +15,16 @@
     justify-content: space-between;
     width: 250px;
     height: 60px;
-    margin: 100px 0 50px 100px;
+    margin: 50px 0 120px 100px;
 }
 
+.h2 {
+    color: rgb(19, 197, 3);
+    font-size: 40px;
+}
+.description {
+    font-size: 22px;
+}
 .cardsContainer {
     display: flex;
     justify-content: space-around;
@@ -23,8 +35,9 @@
 .cardsItem {
     width: 300px;
     transition: .4s;
-    border-radius: 40px 40px 0 0;
+    border-radius: 40px 40px;
     box-shadow: 20px -5px 30px 5px rgba(32, 32, 32, 0.432);
+    background-color: rgb(255, 255, 255);
 }
 .cardsItem:hover {
     scale: 1.09;
@@ -37,7 +50,8 @@
 
 .img {
     border-radius: 35px;
-    object-fit: cover;
+    height: 250px;
+    object-fit: contain;
 }
 
 .cardsInfo {
